--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "parcel build public/index.html && node server.js"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "16.0.0",
     "express": "^4.17.1",
@@ -26,6 +27,7 @@
     "@babel/preset-react": "^7.14.5",
     "@testing-library/react": "^12.0.0",
     "babel-jest": "^27.1.0",
+    "buffer": "^6.0.3",
     "jest": "^27.1.0",
     "react-test-renderer": "18.2.0"
   }
