--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
   "devDependencies": {
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
+    "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^14.5.1",
     "babel-jest": "^27.1.0",
     "buffer": "^6.0.3",
-    "jest": "^27.1.0",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "react-test-renderer": "18.2.0"
   }
 }
